# django-hmin

./: .coveralls.yml  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: build-and-publish.yml  default.yml
_exp/: base.c  setup.py
_exp+/: CMakeLists.txt  base.cpp  base.py
django-for-development/base/: views.py
django-for-development/base/templates/: dense.html  index.html
django-for-development/base/tests/: test_middleware.py
django-for-development/fake_django/: settings.py  urls.py  wsgi.py
django-for-test/: manage.py
django-for-test/fake_django/: settings.py  wsgi.py
hmin/: __init__.py  __main__.py  base.py  decorators.py  middleware.py  setup.py  test.py
hmin/tests/: conftest.py  helpers.py  mock_settings.py  test_base.py  test_decorators.py  test_general.py  test_middleware_plain.py  test_minify.py
hmin/tests/data/: gazeta.html  gazeta_min.html  habrahabr.html  habrahabr_min.html  lenta.html  lenta_min.html  raiffeisen.html  raiffeisen_min.html  youtube.html  youtube_min.html
hmin_c/: a.out  base  base.c  dict.h
hmin_cpp/: CMakeLists.txt  _dev.py  base.cpp  build.sh  build_dev.sh  test2.cpp
hmin_java/: Minify.java
