[build-system]
requires = ["flit_core >=2,<4", "xxhash"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "hmin"
author = "Denis Anikin"
author-email = "ad@xfenix.ru"
description-file = "README.md"
home-page = "https://github.com/xfenix/django-hmin/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
